# arcana

./: .gitignore  README.md  pyproject.toml  requirements.txt
arcana/: arcana.py  color_transfer.py  db.py  lab_transfer.py  palette.py  style.py
arcana/assets/: custom.css  labels_audio.txt  labels_image.txt
